Bug fix - Dashboard center align

--- a/client/todo-list-mernapp/src/App.css
+++ b/client/todo-list-mernapp/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  margin: 65px auto;
   display: flex;
   flex-direction: column;
   align-items: center;
